# TP3_secu

./: README.md  decoder.py  encoder.py  pyproject.toml  stegano.py
src/: cli_interface.py  reveal_message.py  stegano.py
